// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vault reducer epics - createVault bootstraps general channel to new account 1`] = `
Immutable.List [
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6",
    },
    "name": "General",
    "private": true,
    "hash": "eJxNj0FugzAQRa9ieR1VKQEKvUAu0FV3A4yx8eAYeyCxo9y9rrqpNNJIo6//3jylgxXlp7yiwwAkT9IHcwCXG4cdTxKmKWCMJZIZI0fwZNz83mJ9R7st6dGd07JkVdWZkyKuxoa5hYNrp3h2S9vXrsPm0anc+NDjEqcL9bSmVVW91YuzhTlhHIPxbG6ugL60iaIMiPnPSowanEMScIAhGAgF3wQQiT1iiOKmxPcASQxJTKhgJ34rpRZT0X5Kc9hf+7L+P+Cb4KsxZ6YOVqBtbWadDx0ujTt3umoP7bW7V4/WdhcOij/iFl2/2amVr9cPcL5vNw==",
    "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
    "unread": 0,
    "description": "This is a general channel available to all users of Zbay by default.",
  },
]
`;

exports[`vault reducer epics - createVault creates identity and sets balance 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "thisisatestid",
    "address": "sapling-zcash-address",
    "name": "Mercury",
    "balance": "NaN",
  },
  "fetchingBalance": false,
  "errors": "",
}
`;

exports[`vault reducer epics - createVault creates the vault 1`] = `
Array [
  Array [
    Object {
      "masterPassword": "testPassword",
      "network": "testnet",
    },
  ],
]
`;

exports[`vault reducer epics - createVault unlocks the vault 1`] = `
Array [
  Array [
    Object {
      "createSource": true,
      "masterPassword": "testPassword",
      "network": "testnet",
    },
  ],
]
`;

exports[`vault reducer handles clear error 1`] = `
Immutable.VaultState {
  "exists": false,
  "creating": false,
  "unlocking": false,
  "creatingIdentity": false,
  "locked": true,
  "error": "",
}
`;

exports[`vault reducer handles createIdentity 1`] = `
Immutable.VaultState {
  "exists": false,
  "creating": false,
  "unlocking": false,
  "creatingIdentity": false,
  "locked": true,
  "error": "",
}
`;

exports[`vault reducer handles createIdentity error 1`] = `
Immutable.VaultState {
  "exists": false,
  "creating": false,
  "unlocking": false,
  "creatingIdentity": false,
  "locked": true,
  "error": "This is a test error",
}
`;

exports[`vault reducer handles createVault 1`] = `
Immutable.VaultState {
  "exists": true,
  "creating": false,
  "unlocking": false,
  "creatingIdentity": false,
  "locked": true,
  "error": "",
}
`;

exports[`vault reducer handles createVault error 1`] = `
Immutable.VaultState {
  "exists": false,
  "creating": false,
  "unlocking": false,
  "creatingIdentity": false,
  "locked": true,
  "error": "This is a test error",
}
`;

exports[`vault reducer handles createVault with loading state 1`] = `
Immutable.VaultState {
  "exists": false,
  "creating": true,
  "unlocking": false,
  "creatingIdentity": false,
  "locked": true,
  "error": "",
}
`;

exports[`vault reducer handles pending createIdentity 1`] = `
Immutable.VaultState {
  "exists": false,
  "creating": false,
  "unlocking": false,
  "creatingIdentity": true,
  "locked": true,
  "error": "",
}
`;

exports[`vault reducer handles unlockVault 1`] = `
Immutable.VaultState {
  "exists": true,
  "creating": false,
  "unlocking": false,
  "creatingIdentity": false,
  "locked": false,
  "error": "",
}
`;

exports[`vault reducer handles unlockVault error 1`] = `
Immutable.VaultState {
  "exists": true,
  "creating": false,
  "unlocking": false,
  "creatingIdentity": false,
  "locked": true,
  "error": "This is a test error",
}
`;

exports[`vault reducer handles unlockVault with unlocking state 1`] = `
Immutable.VaultState {
  "exists": true,
  "creating": false,
  "unlocking": true,
  "creatingIdentity": false,
  "locked": true,
  "error": "",
}
`;
